Forsøker å kjøre uten coverage